--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,6 +50,31 @@
                     </div>
                 {% endfor %}
             </div>
+            {% if user.is_authenticated %}
+            <button type="button" class="btn btn-primary container-fluid" data-toggle="collapse" data-target="#exam">Start Exam</button>
+            <div id="exam" class="collapse">
+                <form id="questionform" action="point to a submit view" method="post">
+                    {% for question in course.question_set.all %}
+                    <div class="card mt-1">
+                        <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                        {% csrf_token %}
+                        <div class="form-group">
+                           {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                           class="form-check-input" id="{{choice.id}}"
+                                           value="{{choice.id}}">{{ choice.choice_text }}
+                                </label>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    {% endfor %}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form>
+            </div>
+            {% endif %}
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
