--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,17 +39,35 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       <h5><b>Congratulations, {{user.first_name}}!</b> You passed the exam and completed the course with score {{points}} / {{total}}</h5>
     </div>
-        {% else %}
-        <div class="alert alert-danger">
+    {% else %}
+    <div class="alert alert-danger">
             <!--HINT Display failed info -->
-        </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
+        <h5><b>Failed</b> Sorry, {{user.first_name}}! You have failed exam with score  {{points}} / {{total}}</h5>
+    </div>
+     <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
-        </div>
+            {% for question in course.question_set.all %}
+            <div class="card mt-1">
+                <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                <div class="card-body">
+                {% for choice in question.choice_set.all %}
+                    {% if choice.is_correct and choice in choices %}
+                    <p class="text-success">Correct answer: {{choice.choice_text}}</p>
+                    {% elif choice.is_correct and choice not in choices %}
+                    <p class="text-warning">Not selected: {{choice.choice_text}}</p>
+                    {% else %}
+                    <p "text-dark">{{choice.choice_text}}</p>
+                    {% endif %}
+                {% endfor %}
+                </div>    
+            </div>
+            {% endfor %}
     </div>
+</div>
 </body>
 </html>
